# raylib-colony

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  Makefile.Android  Notes.note  colony.includes  colony_game  game_constants.h  game_enums.h  game_structs.h  raylib_game  raylib_game.c
src/Colony/: colony.cpp  colony.h
src/Engine/: Engine.cpp  Engine.h
src/Planet/: planet.cpp  planet.h
src/Resources/: resource_manager.cpp  resource_manager.h  resource_types.h
src/Sect/: sect.cpp  sect.h
src/TimeManager/: time_manager.cpp  time_manager.h
src/Unit/: unit.cpp  unit.h  unit_ui.cpp  unit_ui.h
